Bug 72808 - SIGSEGV in Weston when unfullscreening clients
Summary: SIGSEGV in Weston when unfullscreening clients
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: high blocker
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-17 20:15 UTC by U. Artie Eoff
Modified: 2013-12-18 15:31 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
weston sigsegv gdb backtrace (10.05 KB, text/plain)
2013-12-17 20:15 UTC, U. Artie Eoff
Details

Description U. Artie Eoff 2013-12-17 20:15:26 UTC
Created attachment 90897 [details]
weston sigsegv gdb backtrace

Weston segfaults in weston_view_unmap when unfullscreening client applications.  See attached gdb backtrace.  This regression was caught with wayland-fits efl/egl/WindowFullscreenTest, but can be reproduced manually with weston-terminal:

1. Launch weston-terminal
2. Fullscreen the weston-terminal with <F11>
3. Unfullscreen the weston-terminal with <F11>
4. Observe segfault

Tested on:

wayland (master) 1.3.91-0-g01bde63
drm (master) libdrm-2.4.50-0-g4c5de72
mesa (10.0) heads/10.0-0-g6f7da01
libva (master) libva-1.2.1-0-g88ed1eb
intel-driver (master) 1.2.1-0-g8f306e3
weston (master) heads/master-0-ge22f3bb
efl (efl-1.8) heads/efl-1.8-0-g3b57d1f
elementary (elementary-1.8) heads/elementary-1.8-0-gcf89ada
wayland-fits (master) heads/master-0-gcd75d94

and

wayland (master) 1.3.91-0-g01bde63
drm (master) heads/master-0-g068ea68
mesa (master) heads/master-0-g188630d
libva (master) heads/master-0-g73a11b3
intel-driver (master) 1.2.2-0-g121e70d
weston (master) 1.3.91-0-gfccb57d
efl (master) heads/master-0-g0947bae
elementary (master) heads/master-0-gde76b3c
wayland-fits (master) heads/master-0-gcd75d94
Comment 1 U. Artie Eoff 2013-12-17 20:23:12 UTC
Multiple weston check tests also fail intermittently due to the same sigsegv backtrace.
Comment 2 Kristian Høgsberg 2013-12-17 22:58:37 UTC
commit df42a80ea2ac7ce837d0d058ceb96964ba6e471d
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Tue Dec 17 14:58:19 2013 -0800

    compositor: Initialize output listener links
    
    Make sure the links are initialized so we can safely remove the listeners
    in weston_view_unmap().
    
    https://bugs.freedesktop.org/show_bug.cgi?id=72808


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.